2009-08-21  higepon  <higepon@users.sourceforge.jp>

	* Added index check on vector-ref, vector-set!, Issue 95 reported by tabe.fixedpoint.

	* ListProcedures.cpp (listEx): Rewrote list in C++.

2009-08-20  higepon  <higepon@users.sourceforge.jp>

	* library.scm (perform-dynamic-wind): Improved perform-dynamic-wind.

2009-08-19  higepon  <higepon@users.sourceforge.jp>

	* compiler.scm : Fixed Issue 93 "equivalence predicates take arbitrary number of arguments" reported by tabe.fixedpoint.

2009-08-17  higepon  <higepon@users.sourceforge.jp>

	* VM-Run.cpp (VM::run): Added error check on set-c[ad]r! reported by mtakuya.

	* VM-Run.h (NUM_CMP_LOCAL): Fixed Issue 91. (by mrc.mgg).

	* PortProcedures.cpp (getStringNEx): Fixed Issue 92.

	* lib/memcached.ss (memcached-delete!): Added.

	* UtilityProcedures.cpp (number->string): Fixed Issue 90.

	* VM-Run.cpp (run): call/cc restoring code is now generated on restoring time not on capturing time.

	* VM-inl.h (VM::makeContinuation): Rewrote winders in C++ for performance reason.

2009-08-14  higepon  <higepon@users.sourceforge.jp>

	* UtilityProcedures.cpp (current-dynamic-winders): Adeed.

	* lib/core/bitwise.scm (bitwise-bit-field): Fixed argument check Issue 88.

	* ErrorProcedures.cpp (assertionViolationEx): Fixed an order of irritants.

2009-08-13  higepon  <higepon@users.sourceforge.jp>

	* Now memcached client conects to mulitple servers.
2009-08-12  higepon  <higepon@users.sourceforge.jp>

	* OSCompat.cpp (File::write): Not to use WriteConsole for redirection problem.

	* VM-Run.h (NUM_CMP_LOCAL): Fixed Issue 86.

	* lib/mosh/ffi.ss: Added malloc and free.

	* lib/mosh/ffi.ss: Allow bytevector can be passed to void*.

	* OSCompat.cpp (write): Handled Emacs.

	* OSCompatSocket.h: Added include wspiapi.h.

2009-08-11  higepon  <higepon@users.sourceforge.jp>

	* test/test.bat: Added test for ";" separated loadpaths.

	* Makefile.am (test): Added test for ":" separated loadpaths.
