@@ -91,41 +91,41 @@
 (define-syntax GENERICexpt (syntax-rules () ((_ x y) (expt x y))))
 
 (format #t "\n\n;;  GABRIEL\n")
-(time-bench boyer 3)
-(time-bench browse 120)
-(time-bench cpstak 80)
-(time-bench ctak 25)
-(time-bench dderiv 160000)
-(time-bench deriv 320000)
-(time-bench destruc 100)
-(time-bench diviter 200000)
-(time-bench divrec 140000)
+;; (time-bench boyer 3)
+;; (time-bench browse 120)
+;; (time-bench cpstak 80)
+;; (time-bench ctak 25)
+;; (time-bench dderiv 160000)
+;; (time-bench deriv 320000)
+;; (time-bench destruc 100)
+;; (time-bench diviter 200000)
+;; (time-bench divrec 140000)
 (time-bench puzzle 12)
-(time-bench takl 35)
-(time-bench triangl 1)
+;; (time-bench takl 35)
+;; (time-bench triangl 1)
 
-(format #t "\n\n;;  ARITHMETIC\n")
-(time-bench fft 200)
-(time-bench fib 1)
-(time-bench fibc 50)
-(time-bench fibfp 1)
-(time-bench mbrot 10)
-(time-bench nucleic 1)
-(time-bench pnpoly 10000)
-(time-bench sum 1000)
-(time-bench sumfp 600)
-(time-bench tak 200)
+;; (format #t "\n\n;;  ARITHMETIC\n")
+;; (time-bench fft 200)
+;; (time-bench fib 1)
+;; (time-bench fibc 50)
+;; (time-bench fibfp 1)
+;; (time-bench mbrot 10)
+;; (time-bench nucleic 1)
+;; (time-bench pnpoly 10000)
+;; (time-bench sum 1000)
+;; (time-bench sumfp 600)
+;; (time-bench tak 200)
 
-(format #t "\n\n;;  MISCELLANEOUS\n")
-(time-bench conform 4)
-(time-bench earley 20)
-(time-bench graphs 15)
-(time-bench mazefun 100)
-(time-bench nqueens 150)
-(time-bench paraffins 100)
-(time-bench peval 20)
-(time-bench ray 1)
-(time-bench scheme 3000)
+;; (format #t "\n\n;;  MISCELLANEOUS\n")
+;; (time-bench conform 4)
+;; (time-bench earley 20)
+;; (time-bench graphs 15)
+;; (time-bench mazefun 100)
+;; (time-bench nqueens 150)
+;; (time-bench paraffins 100)
+;; (time-bench peval 20)
+;; (time-bench ray 1)
+;; (time-bench scheme 3000)
 
 (newline)
 (flush)
