@@ -1,3 +1,9 @@
+2009-08-23  higepon  <higepon@users.sourceforge.jp>
+
+	* tools/psyntax-r6rs/rev10_to_10/psyntax/builders.ss : Changed R6RS expansion pattern.
+
+	* tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss: An output of -e option is now stripped.
+
 2009-08-21  higepon  <higepon@users.sourceforge.jp>
 
 	* Added index check on vector-ref, vector-set!, Issue 95 reported by tabe.fixedpoint.
